# EWOPE

./: .gitignore  CMakeLists.txt  README.md
data/: jura_boundary.gpkg  prediction.csv
examples/: README.md
examples/W/W1/in/data/: samples_sec4000.csv
examples/W/W1/in/geometry/: sec_xz.xyz
examples/W/W2/in/data/: samples_sec4000.csv
examples/W/W2/in/geometry/: sec.xyz
examples/data/in/: samples_sec4000.csv
examples/scripts/: parse_data.sh
include/: load_csv.cpp  load_csv.h  utils.cpp  utils.h
include/data_structures/: data.cpp  data.h  geometry.cpp  geometry.h  graph.cpp  graph.cpp.autosave  graph.h  info_data.h  point.cpp  point.h  project.cpp  project.h  rotation.h  surface.cpp  surface.h  volume.cpp  volume.h
include/flag/: check.cpp  check.h  flag.cpp  flag.h  num_check.cpp  num_check.h
include/metadata/: compute_meta.cpp  compute_meta.h  data_meta.cpp  data_meta.h  data_statistics.cpp  data_statistics.h  data_summary.cpp  data_summary.h  data_summary_meta.cpp  data_summary_meta.h  dependencies.cpp  dependencies.h  extraction_meta.cpp  extraction_meta.h  fitvario_methods.h  geometry_meta.cpp  geometry_meta.h  manipulate_meta.cpp  manipulate_meta.h  metadata.cpp  metadata.h  surface_meta.cpp  surface_meta.h  vario_meta.cpp  vario_meta.h  vario_methods.h  volume_meta.cpp  volume_meta.h
include/metadata/extended/: mesh_metadata.cpp  mesh_metadata.h
src/: main.cpp  main_check.cpp  main_core.cpp  main_data.cpp  main_datacpp  main_history.cpp
